--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "bower": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-appcache": "0.0.4",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-manifest": "0.0.6",
+    "gulp-minify-css": "^1.2.0",
     "gulp-sass": "^2.0.3",
+    "gulp-uglify": "^1.2.0",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
