--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-manifest": "0.0.6",
     "gulp-minify-css": "^1.2.0",
+    "gulp-order": "^1.1.1",
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
     "http-server": "^0.6.1",
@@ -35,7 +36,7 @@
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
+    "protractor": "protractor tests/e2e/protractor.conf.js",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
 }
